Align modal center

--- a/analysis.html
+++ b/analysis.html
@@ -33,18 +33,14 @@
     </nav>
 
    <!-- Modal -->
-    <div class="modal fade" id="submitAnalyzeModal" tabindex="-1" aria-labelledby="submitAnalyzeModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header" style="border: none;">
-            <h5 class="modal-title" id="submitAnalyzeModalLabel">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
+    <div class="modal text-center fade" id="submitAnalyzeModal" tabindex="-1" aria-labelledby="submitAnalyzeModalLabel" aria-hidden="true" >
+      <div class="modal-dialog modal-dialog-centered justify-content-center">
+        <div class="modal-content" style="width: 341px; background: #FFFFFF; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15); border-radius: 12px;">
           <div class="modal-body">
-            Some cool text goes here.....
+            Lorem Ipsum is simply dummy text of the printing and typesetting.
           </div>
-          <div class="modal-footer" style="border: none;">
-            <button type="button" class="pop-up-done-btn" data-bs-dismiss="modal">Close</button>
+          <div class="modal-footer justify-content-center" style="border: none;">
+            <button type="button" class="btn" style="background: #A858E1; border-radius: 3px; color: white;" data-bs-dismiss="modal">Okay</button>
           </div>
         </div>
       </div>
@@ -67,7 +63,7 @@
         <section class="common_card">
           <!-- choose date select -->
           <select class="form-select mb-3" aria-label="Default select example" id="datepickerSelect">
-            <option selected>Choose Period</option>
+            <option>Choose Period</option>
             <option value="15">Last 15 days</option>
             <option value="30">Last 30 days</option>
             <option value="whole_period">Whole period</option>
@@ -1729,6 +1725,7 @@
   
   createOptions('selectFeatures', features);
   createOptions('excludeFeatures', features_ex);
+
   function submitAnalyze() {
     data['features'] = $('#selectFeatures').val();
     data['features_exc'] = $('#excludeFeatures').val();
