--- a/analysis.html
+++ b/analysis.html
@@ -74,7 +74,7 @@
           <!-- feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Select Feature(s)<i title="text text text" class="fa-solid fa-info-circle " data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+              <label class="commonLabel" for="">Analyze Activities<i title="text text text" class="fa-solid fa-info-circle " data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
             </div>
             <div class="col-7">
@@ -93,7 +93,7 @@
           <!-- exclude feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Exclude Feature(s)<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+              <label class="commonLabel" for="">Exclude Activities<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
             </div>
             <div class="col-7">
@@ -118,7 +118,7 @@
                 <p class="subLabel">Untill next analysis</p>
               </div>
               <div class="col-7">
-                <input type="text" class="form-control" disabled placeholder="1 Week">
+                <input type="text" class="form-control" disabled placeholder="5">
               </div>
             </div>
 
@@ -1645,7 +1645,7 @@
     selectRefresh();
 
     $(".js-select2").select2({
-        placeholder: "EmoFreq/Energy",
+        placeholder: "Select",
         dropdownCssClass: "mutleSelect",
         tags: true,
         closeOnSelect: false
