--- a/analysis.html
+++ b/analysis.html
@@ -63,14 +63,9 @@
         <section class="common_card">
           <!-- choose date select -->
           <select class="form-select mb-3" aria-label="Default select example" id="datepickerSelect">
-<<<<<<< Updated upstream
-            <!-- <option>Choose Period</option> -->
-            <option selected value="30">Last 30 days</option>
-=======
             <option selected>Choose Period</option>
->>>>>>> Stashed changes
             <option value="15">Last 15 days</option>
-            <!-- <option value="30">Last 30 days</option> -->
+            <option value="30">Last 30 days</option>
             <option value="whole_period">Whole period</option>
             <option value="custom">Custom</option>
           </select>
@@ -254,7 +249,7 @@
             <div id="recordOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
               <div class="accordion-body">
                 <!-- analysis period -->
-                <div class="commonLabel">Analysis Period:<span class="date">2022.07.01 - 2022.08.01</span></div>
+                <div class="commonLabel">Analysis Period:<span class="date"> 2022.07.01 - 2022.08.01</span></div>
                 <div class="borderLine"></div>
                 <div class="progress_head">
                   <div class="commonLabel">Emotional Frequency:<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i></div>
@@ -690,7 +685,7 @@
                 <!-- analysis period -->
                 <div class="commonLabel">
                   Analysis Period:
-                  <span class="date">2022.07.01 - 2022.08.01</span>
+                  <span class="date"> 2022.07.01 - 2022.08.01</span>
                 </div>
                 <!-- section divider -->
                 <div class="borderLine"></div>
@@ -1127,7 +1122,7 @@
             <div id="recordThree" class="accordion-collapse collapse" aria-labelledby="headingThree">
               <div class="accordion-body">
                 <!-- analysis period -->
-                <div class="commonLabel">Analysis Period: <span class="date">2022.07.01 - 2022.08.01</span></div>
+                <div class="commonLabel">Analysis Period: <span class="date"> 2022.07.01 - 2022.08.01</span></div>
                 <!-- section divider -->
                 <div class="borderLine"></div>
                 <div class="progress_head">
