delete-modal, multiselect color, popover-fixing

--- a/analysis.html
+++ b/analysis.html
@@ -33,7 +33,7 @@
     </nav>
 
    <!-- Modal -->
-    <div class="modal text-center fade" id="submitAnalyzeModal" tabindex="-1" aria-labelledby="submitAnalyzeModalLabel" aria-hidden="true" >
+    <div class="modal text-center fade show" id="submitAnalyzeModal" tabindex="-1" aria-labelledby="submitAnalyzeModalLabel" aria-hidden="true" >
       <div class="modal-dialog modal-dialog-centered justify-content-center">
         <div class="modal-content" style="width: 341px; background: #FFFFFF; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15); border-radius: 12px;">
           <div class="modal-body">
@@ -50,11 +50,17 @@
     <div class="backdrop "></div>
     <div class="pop-up-delete">
       <img class="del-icon-pop" src="../assets/images/cross_icon.svg" alt="">
-      <img class="pop-icon" src="../assets/images/popIcon.png" alt="">
-      <h3 class="text-center text-bold">Are you sure?</h3>
-      <p class="pop-descp">Lorem ipsum dolor sit amet consectetur</p>
-      <button class="pop-up-done-btn">Done</button>
-      <button class="pop-up-back-btn">Back</button>
+      <div class="popup_icon">
+        <img src="assets/images/delete_icon2.svg" alt="">
+      </div>
+      <h3 class="pop-title">Delete Record</h3>
+      <p class="pop-descp">Are you sure you want to <br> delete it?</p>
+      <div class="modal_btns">
+        <button class="pop-up-back-btn btn">Back</button>
+        <button class="pop-up-done-btn btn">Delete</button>
+      </div>
+      
+      
     </div>
     <!-- banner start -->
     <section class="banner">
@@ -73,7 +79,7 @@
           <!-- feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Analyze Activities<i title="text text text" class="fa-solid fa-info-circle " data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+              <label class="commonLabel" for="">Analyze Activities<i title="text text text" class="fa-solid fa-info-circle " data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
             </div>
             <div class="col-7">
@@ -92,7 +98,7 @@
           <!-- exclude feature select -->
           <div class="row mb-3">
             <div class="col-5 my-auto">
-              <label class="commonLabel" for="">Exclude Activities<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+              <label class="commonLabel" for="">Exclude Activities<i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
             </div>
             <div class="col-7">
@@ -112,7 +118,7 @@
             <div class="row mb-3" id="rDays_row">
               <div class="col-5 my-auto">
                 <label class="commonLabel" for="">Remaining days
-                <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+                <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                 </label>
                 <p class="subLabel">Untill next analysis</p>
               </div>
@@ -125,7 +131,7 @@
           <div class="row mb-3" id="rAnalysis_row">
             <div class="col-5 my-auto">
               <label class="commonLabel" for="">Analysis Left
-              <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+              <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
               </label>
               <!-- <p class="subLabel">Untill next analysis</p> -->
             </div>
@@ -252,7 +258,7 @@
                 <div class="commonLabel">Analysis Period:<span class="date"> 2022.07.01 - 2022.08.01</span></div>
                 <div class="borderLine"></div>
                 <div class="progress_head">
-                  <div class="commonLabel">Emotional Frequency:<i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i></div>
+                  <div class="commonLabel">Emotional Frequency:<i title="text text text"  class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i></div>
                   <div class="commonLabel averageLabel">
                     Average :
                     <div class="average_value">
@@ -429,7 +435,7 @@
                   <div class="progress_head">
                     <div class="commonLabel">
                       Energy
-                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                     </div>
                     <div class="commonLabel averageLabel">
                       Average :
@@ -692,7 +698,7 @@
                 <div class="progress_head">
                   <div class="commonLabel">
                     Emotional Frequency:
-                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                   </div>
                   <div class="commonLabel averageLabel">
                     Average :
@@ -870,7 +876,7 @@
                   <div class="progress_head">
                     <div class="commonLabel">
                       Energy
-                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                     </div>
                     <div class="commonLabel averageLabel">
                       Average :
@@ -1128,7 +1134,7 @@
                 <div class="progress_head">
                   <div class="commonLabel">
                     Emotional Frequency:
-                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+                    <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                   </div>
                   <div class="commonLabel averageLabel">
                     Average :
@@ -1306,7 +1312,7 @@
                   <div class="progress_head">
                     <div class="commonLabel">
                       Energy
-                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
+                      <i title="text text text" class="fa-solid fa-info-circle" data-bs-trigger="hover" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Analysis if moon phase has an impact on your well being"></i>
                     </div>
                     <div class="commonLabel averageLabel">
                       Average :
