--- a/analysis.html
+++ b/analysis.html
@@ -1735,7 +1735,6 @@
   function submitAnalyze() {
     let dateRange = $('#datepickerSelect').val();
     let features = $('#selectFeatures').val();
-
     if(dateRange == 'Choose Period') {
       $('#datepickerSelect').css("border", "1px solid red")
     } else {
@@ -1755,7 +1754,7 @@
       $('#datepicker').css('border', 'none')
     }
 
-    if(dateRange == 'Choose Period' || features.length == 0 || $('#datepicker').val() == '') return;
+    if((dateRange == 'custom' && $('#datepicker').val() == '') || features.length == 0) return;
 
     data['features'] = $('#selectFeatures').val();
     data['features_exc'] = $('#excludeFeatures').val();
