--- a/analysis.html
+++ b/analysis.html
@@ -33,14 +33,18 @@
     </nav>
 
    <!-- Modal -->
-    <div class="modal text-center fade show" id="submitAnalyzeModal" tabindex="-1" aria-labelledby="submitAnalyzeModalLabel" aria-hidden="true" >
+    <div class="modal text-center fade modal-analyze" id="submitAnalyzeModal" tabindex="-1" aria-labelledby="submitAnalyzeModalLabel" aria-hidden="true" >
       <div class="modal-dialog modal-dialog-centered justify-content-center">
-        <div class="modal-content" style="width: 341px; background: #FFFFFF; box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15); border-radius: 12px;">
-          <div class="modal-body">
-            Your data is being analyzed, it might take some time... So please come back later ;-)
+        <div class="modal-content">
+          <div class="modal-body pb-0">
+            <p class="mb-0"> Your data is being analyzed, it might take 
+              some time... 
+              <br>
+              So please come back later ;-)</p>
+           
           </div>
           <div class="modal-footer justify-content-center" style="border: none;">
-            <button type="button" class="btn" style="background: #A858E1; border-radius: 3px; color: white;" data-bs-dismiss="modal">Okay</button>
+            <button type="button" class="btn btn_okay" data-bs-dismiss="modal">Okay</button>
           </div>
         </div>
       </div>
