Fix datepicker position on mobile

--- a/analysis.html
+++ b/analysis.html
@@ -23,6 +23,7 @@
     <title>Analysis</title>
     <script src="https://cdn.jsdelivr.net/npm/@easepick/bundle@1.2.0/dist/index.umd.min.js"></script>
   </head>
+  
   <body>
     <!-- page header starting -->
     <nav class="navbar navbar-sticky-top Gradient">
@@ -1808,7 +1809,7 @@
   const picker = new easepick.create({
     element: document.getElementById('datepicker'),
     css: [
-      'https://cdn.jsdelivr.net/npm/@easepick/bundle@1.2.0/dist/index.css'
+      './assets/css/datepicker.css'
     ],
     plugins: ['RangePlugin', 'LockPlugin'],
     zIndex: 999,
