Popup text change
Popup text change

--- a/analysis.html
+++ b/analysis.html
@@ -56,8 +56,8 @@
       <div class="popup_icon">
         <img src="assets/images/delete_icon2.svg" alt="">
       </div>
-      <h3 class="pop-title">Delete Record</h3>
-      <p class="pop-descp">Are you sure you want to <br> delete it?</p>
+      <h3 class="pop-title">Deleting Record</h3>
+      <p class="pop-descp">Are you sure you want to delete it?</p>
       <div class="modal_btns">
         <button class="pop-up-back-btn btn">Back</button>
         <button class="pop-up-done-btn btn">Delete</button>
